--- a/src/gui/ChatScreen.fxml
+++ b/src/gui/ChatScreen.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextArea?>
@@ -26,11 +25,12 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="1000.0" prefHeight="742.0" prefWidth="1257.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ChatController">
    <children>
-      <Button layoutX="1012.0" layoutY="701.0" mnemonicParsing="false" onMouseClicked="#attachButtonPressed" prefHeight="34.0" prefWidth="48.0" AnchorPane.bottomAnchor="7.0" AnchorPane.rightAnchor="197.0" />
+      <TextField fx:id="conversantName" editable="false" layoutX="297.0" layoutY="20.0" prefHeight="27.0" prefWidth="149.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="290.0" AnchorPane.topAnchor="19.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f8f8f8" height="41.0" layoutY="59.0" stroke="#f3f3f3" strokeType="INSIDE" width="234.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="59.0" />
       <ButtonBar layoutX="268.0" layoutY="116.0" prefHeight="17.0" prefWidth="14.0" />
-      <AnchorPane layoutY="59.0" prefHeight="631.0" prefWidth="190.0" AnchorPane.bottomAnchor="52.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="59.0">
+      <AnchorPane layoutY="59.0" prefHeight="631.0" prefWidth="234.0" AnchorPane.bottomAnchor="52.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="59.0">
          <children>
-            <ListView fx:id="userList" layoutY="37.0" onMouseClicked="#userClicked" prefHeight="600.0" prefWidth="190.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="-6.0" AnchorPane.topAnchor="37.0">
+            <ListView fx:id="userList" layoutY="40.0" onMouseClicked="#userClicked" prefHeight="597.0" prefWidth="234.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="-6.0" AnchorPane.topAnchor="40.0">
                <effect>
                   <Blend opacity="0.35" />
                </effect>
@@ -38,24 +38,16 @@
                   <Cursor fx:constant="DEFAULT" />
                </cursor>
             </ListView>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f8f8f8" height="41.0" layoutX="4.0" layoutY="-1.0" stroke="#f3f3f3" strokeType="INSIDE" width="190.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="-3.0" />
-            <CheckBox fx:id="botCheckBox" layoutX="14.0" layoutY="11.0" mnemonicParsing="false" onMouseClicked="#botChecked" text="SassiBotMode" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="11.0" />
-            <ImageView fitHeight="34.0" fitWidth="28.0" layoutX="144.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="144.0" AnchorPane.topAnchor="5.0">
-               <image>
-                  <Image url="@assets/robot.png" />
-               </image>
-            </ImageView>
          </children>
       </AnchorPane>
-      <TextArea fx:id="chatView" editable="false" layoutX="190.0" layoutY="57.0" prefHeight="641.0" prefWidth="874.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="46.0" AnchorPane.leftAnchor="190.0" AnchorPane.rightAnchor="189.0" AnchorPane.topAnchor="55.0" />
-      <Line endX="100.0" layoutX="190.0" layoutY="102.0" rotate="90.0" scaleX="0.3" startX="-100.0" stroke="#efefef" AnchorPane.bottomAnchor="497.5" AnchorPane.leftAnchor="89.5" AnchorPane.topAnchor="30.0" />
-      <Line endX="100.0" layoutX="811.0" layoutY="95.0" rotate="-90.0" startX="-100.0" stroke="#efefef" AnchorPane.bottomAnchor="504.5" AnchorPane.rightAnchor="88.5" AnchorPane.topAnchor="94.5" />
-      <Text fill="#73e5d7" layoutX="55.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WorkLAH" wrappingWidth="80.93797601759434">
+      <TextArea fx:id="chatView" editable="false" layoutX="234.0" layoutY="59.0" prefHeight="641.0" prefWidth="781.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="42.0" AnchorPane.leftAnchor="234.0" AnchorPane.rightAnchor="242.0" AnchorPane.topAnchor="58.0" />
+      <Line endX="100.0" layoutX="1016.0" layoutY="54.0" rotate="-90.0" startX="-100.0" stroke="#efefef" AnchorPane.bottomAnchor="687.5" AnchorPane.rightAnchor="140.5" AnchorPane.topAnchor="53.5" />
+      <Text fill="#73e5d7" layoutX="77.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WorkLAH" wrappingWidth="80.93797601759434">
          <font>
             <Font name="Avenir Roman" size="18.0" />
          </font>
       </Text>
-      <HBox layoutX="206.0" layoutY="14.0">
+      <HBox layoutX="239.0" layoutY="14.0">
          <children>
             <ImageView fx:id="conversantImage" fitHeight="43.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
@@ -69,87 +61,90 @@
             </Ellipse>
          </children>
       </HBox>
-      <Text fill="#73e5d7" layoutX="1130.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TASKS" wrappingWidth="63.121957778930664" AnchorPane.bottomAnchor="703.0" AnchorPane.rightAnchor="63.878042221069336" AnchorPane.topAnchor="12.0">
+      <Text fill="#73e5d7" layoutX="1105.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TASKS" wrappingWidth="63.121957778930664" AnchorPane.bottomAnchor="696.4120006561279" AnchorPane.rightAnchor="88.87804222106934" AnchorPane.topAnchor="21.0">
          <font>
             <Font name="Avenir Roman" size="18.0" />
          </font>
       </Text>
       <HBox layoutX="14.0" layoutY="556.0" />
-      <ImageView fx:id="attachButton" fitHeight="21.0" fitWidth="34.0" layoutX="1026.0" layoutY="708.0" onMouseClicked="#attachButtonPressed" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="210.0">
-         <image>
-            <Image url="@assets/attachment.png" />
-         </image>
-      </ImageView>
-      <TextField fx:id="chatBox" layoutX="251.0" layoutY="695.0" onAction="#enterPressedChat" prefHeight="41.0" prefWidth="697.0" promptText="Type message...." AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="251.0" AnchorPane.rightAnchor="309.0" />
+      <TextField fx:id="chatBox" layoutX="291.0" layoutY="695.0" onAction="#enterPressedChat" prefHeight="41.0" prefWidth="605.0" promptText="Type message...." AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="291.0" AnchorPane.rightAnchor="361.0" />
       <ImageView fx:id="profileImage" fitHeight="40.0" fitWidth="42.0" layoutX="6.0" layoutY="557.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="6.0">
          <image>
             <Image url="@assets/profile-icon-9.png" />
          </image>
       </ImageView>
-      <Ellipse fill="#22cd61" layoutX="55.0" layoutY="574.0" radiusX="7.0" radiusY="9.0" scaleY="0.8" smooth="false" stroke="#eeeeee" strokeType="INSIDE" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="48.0" />
-      <Label fx:id="time" layoutX="963.0" layoutY="18.0" prefHeight="25.0" prefWidth="34.0" AnchorPane.rightAnchor="204.0" AnchorPane.topAnchor="17.0" />
-      <Hyperlink layoutX="48.0" layoutY="721.0" onAction="#logoutPressed" text="Logout" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="60.0" />
-      <Line endX="100.0" layoutX="1068.0" layoutY="715.0" rotate="90.0" scaleX="0.25" startX="-100.0" stroke="#efefef" AnchorPane.bottomAnchor="24.5" AnchorPane.rightAnchor="88.5" />
-      <Button fx:id="sendButton2" layoutX="960.0" layoutY="701.0" mnemonicParsing="false" onMouseClicked="#sendPressed" prefHeight="34.0" prefWidth="48.0" AnchorPane.bottomAnchor="7.0" AnchorPane.rightAnchor="249.0" />
-      <ImageView fx:id="sendButton" fitHeight="27.0" fitWidth="21.0" layoutX="974.0" layoutY="708.0" onMouseClicked="#sendPressed" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="262.0">
+      <Line endX="100.0" layoutX="1016.0" layoutY="716.0" rotate="90.0" scaleX="0.25" startX="-100.0" stroke="#efefef" AnchorPane.bottomAnchor="25.5" AnchorPane.rightAnchor="140.5" />
+      <Button fx:id="sendButton2" layoutX="903.0" layoutY="699.0" mnemonicParsing="false" onMouseClicked="#sendPressed" prefHeight="34.0" prefWidth="48.0" AnchorPane.bottomAnchor="9.0" AnchorPane.rightAnchor="306.0" />
+      <ImageView fx:id="sendButton" fitHeight="27.0" fitWidth="21.0" layoutX="917.0" layoutY="706.0" onMouseClicked="#sendPressed" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="319.0">
          <image>
             <Image url="@assets/1015742-200.png" />
          </image>
       </ImageView>
-      <AnchorPane layoutX="1071.0" layoutY="58.0" prefHeight="638.0" prefWidth="190.0" style="-fx-background-color: rgb(56,218,198);" AnchorPane.bottomAnchor="46.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="56.0">
+      <AnchorPane layoutX="1019.0" layoutY="56.0" prefHeight="640.0" prefWidth="241.0" style="-fx-background-color: rgb(56,218,198);" AnchorPane.bottomAnchor="46.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0">
          <children>
-            <ListView fx:id="taskList" onMouseClicked="#taskClicked" opacity="0.3" prefHeight="639.0" prefWidth="190.0" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <ListView fx:id="taskList" onMouseClicked="#taskClicked" opacity="0.3" prefHeight="636.0" prefWidth="241.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <effect>
                   <Blend opacity="0.35" />
                </effect>
                <contextMenu>
                   <ContextMenu>
                     <items>
-                      <MenuItem fx:id="deletePressed" mnemonicParsing="false" text="Unspecified Action" />
+                      <MenuItem fx:id="deletePressed" mnemonicParsing="false" onAction="#deleteSelected" text="Delete" />
                     </items>
                   </ContextMenu>
                </contextMenu>
             </ListView>
          </children>
       </AnchorPane>
-      <Button fx:id="newChat" layoutX="1012.0" layoutY="9.0" mnemonicParsing="false" onMouseClicked="#newChatPressed" prefHeight="40.0" prefWidth="42.0" AnchorPane.rightAnchor="197.0" AnchorPane.topAnchor="9.0" />
-      <TextField fx:id="conversantName" editable="false" layoutX="268.0" layoutY="13.0" prefHeight="27.0" prefWidth="149.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="264.0" AnchorPane.topAnchor="13.0" />
-      <DatePicker fx:id="dateSelector" layoutX="1125.0" layoutY="705.0" onAction="#dateSelected" prefHeight="27.0" prefWidth="89.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="9.0" />
-      <ImageView fx:id="newChatIcon" fitHeight="25.0" fitWidth="28.0" layoutX="1027.0" layoutY="17.0" onMouseClicked="#newChatPressed" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="205.0" AnchorPane.topAnchor="17.0">
+      <Button fx:id="newChat" layoutX="959.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#newChatPressed" prefHeight="40.0" prefWidth="42.0" AnchorPane.rightAnchor="256.0" AnchorPane.topAnchor="10.0" />
+      <DatePicker fx:id="dateSelector" layoutX="1125.0" layoutY="705.0" onAction="#dateSelected" prefHeight="27.0" prefWidth="149.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="9.0" />
+      <ImageView fx:id="newChatIcon" fitHeight="25.0" fitWidth="28.0" layoutX="968.0" layoutY="18.0" onMouseClicked="#newChatPressed" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="264.0" AnchorPane.topAnchor="18.0">
          <image>
             <Image url="@assets/NewChat.png" />
          </image>
       </ImageView>
-      <Text fill="#73e5d7" layoutX="1073.0" layoutY="713.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SET TASK DEADLINE" textAlignment="CENTER" wrappingWidth="80.93806591629982" AnchorPane.bottomAnchor="5.5" AnchorPane.rightAnchor="103.06193408370018">
+      <Text fill="#73e5d7" layoutX="1019.0" layoutY="714.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SET TASK DEADLINE" textAlignment="CENTER" wrappingWidth="80.93806591629982" AnchorPane.bottomAnchor="5.484001159667969" AnchorPane.rightAnchor="157.06193408370018">
          <font>
             <Font name="Avenir Roman" size="13.0" />
          </font>
       </Text>
-      <Line endX="100.0" layoutX="113.0" layoutY="58.0" scaleX="4.0" startX="-100.0" stroke="#efefef" AnchorPane.leftAnchor="-200.0" AnchorPane.topAnchor="56.0" />
-      <TextField fx:id="userName" editable="false" layoutX="64.0" layoutY="695.0" prefHeight="27.0" prefWidth="124.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="64.0" />
-      <Line endX="100.0" layoutX="1078.0" layoutY="725.0" scaleX="1.2" startX="-100.0" stroke="#efefef" AnchorPane.bottomAnchor="45.5" AnchorPane.leftAnchor="-28.5" />
+      <TextField fx:id="userName" editable="false" layoutX="55.0" layoutY="700.0" prefHeight="27.0" prefWidth="124.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="56.0" />
+      <Line endX="100.0" layoutX="1078.0" layoutY="725.0" scaleX="1.2" startX="-100.0" stroke="#efefef" AnchorPane.bottomAnchor="45.5" AnchorPane.leftAnchor="15.0" />
       <HBox layoutX="190.0" layoutY="673.0" />
-      <HBox layoutX="538.0" layoutY="374.0" prefHeight="34.0" prefWidth="114.0" AnchorPane.bottomAnchor="334.0" AnchorPane.leftAnchor="538.0" />
-      <ImageView fitHeight="21.0" fitWidth="25.0" layoutX="221.0" layoutY="684.0" onMouseClicked="#emoji2selected" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="221.0">
+      <ImageView fitHeight="21.0" fitWidth="25.0" layoutX="267.0" layoutY="697.0" onMouseClicked="#emoji2selected" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="24.0" AnchorPane.leftAnchor="267.0">
          <image>
             <Image url="@assets/emoji1.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="22.0" fitWidth="25.0" layoutX="218.0" layoutY="711.0" onMouseClicked="#emoji3selected" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="192.0">
+      <ImageView fitHeight="22.0" fitWidth="25.0" layoutX="238.0" layoutY="721.0" onMouseClicked="#emoji3selected" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="238.0">
          <image>
             <Image url="@assets/emoji4.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="21.0" layoutX="191.0" layoutY="694.0" onMouseClicked="#emoji1selected" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="26.0" AnchorPane.leftAnchor="195.0">
+      <ImageView fitHeight="25.0" fitWidth="21.0" layoutX="241.0" layoutY="695.0" onMouseClicked="#emoji1selected" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="241.0">
          <image>
             <Image url="@assets/emoji3.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="21.0" fitWidth="25.0" layoutX="194.0" layoutY="688.0" onMouseClicked="#emoji2selected" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="221.0">
+      <ImageView fitHeight="21.0" fitWidth="25.0" layoutX="267.0" layoutY="722.0" onMouseClicked="#emoji2selected" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="267.0">
          <image>
             <Image url="@assets/emoji2.png" />
          </image>
       </ImageView>
-      <Line endX="100.0" layoutX="191.0" layoutY="369.0" rotate="90.0" scaleX="10.0" startX="-100.0" stroke="#efefef" AnchorPane.bottomAnchor="372.5" AnchorPane.leftAnchor="90.5" AnchorPane.rightAnchor="965.5" />
+      <Line endX="100.0" layoutX="235.0" layoutY="751.0" rotate="90.0" scaleX="10.0" startX="-100.0" stroke="#efefef" AnchorPane.bottomAnchor="-9.5" AnchorPane.leftAnchor="134.5" AnchorPane.rightAnchor="921.5" />
+      <CheckBox fx:id="botCheckBox" layoutX="8.0" layoutY="67.0" mnemonicParsing="false" onMouseClicked="#botChecked" prefHeight="27.0" prefWidth="174.0" text="SassiBotMode" AnchorPane.leftAnchor="8.0" AnchorPane.topAnchor="67.0" />
+      <ImageView fitHeight="34.0" fitWidth="28.0" layoutX="192.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="192.0" AnchorPane.topAnchor="67.0">
+         <image>
+            <Image url="@assets/robot.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="955.0" layoutY="699.0" mnemonicParsing="false" onMouseClicked="#attachButtonPressed" prefHeight="34.0" prefWidth="48.0" AnchorPane.bottomAnchor="9.0" AnchorPane.rightAnchor="254.0" />
+      <ImageView fx:id="attachButton" fitHeight="21.0" fitWidth="34.0" layoutX="969.0" layoutY="706.0" onMouseClicked="#attachButtonPressed" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="267.0">
+         <image>
+            <Image url="@assets/attachment.png" />
+         </image>
+      </ImageView>
+      <Ellipse fill="#22cd61" layoutX="55.0" layoutY="574.0" radiusX="7.0" radiusY="9.0" scaleY="0.8" smooth="false" stroke="#eeeeee" strokeType="INSIDE" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="48.0" />
+      <Hyperlink layoutX="48.0" layoutY="721.0" onAction="#logoutPressed" text="Logout" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="60.0" />
    </children>
 </AnchorPane>
